# kitetsu

./: CMakeLists.txt  README.md  build.sh  client.cfg  pyproject.toml  requirements.txt  server.cfg  setup.py  test_server.py
kitetsu/: __init__.py  cli.py  client.py
src/: replacesoh_impl.cpp
